syntax = "proto3";
option go_package = "infrastructure/rpc/grpc";

package grpc;

service StorageService {
  rpc CreateStorage(CreateStorageRequest) returns (CreateStorageResponse);
  rpc DeleteStorage(DeleteStorageRequest) returns (DeleteStorageResponse);
  rpc ExistsStorage(ExistsStorageRequest) returns (ExistsStorageResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateStorageRequest {
  string name = 1;
}

message CreateStorageResponse {}

message DeleteStorageRequest {
  string name = 1;
}

message DeleteStorageResponse {}

message ExistsStorageRequest {
  string name = 1;
}

message ExistsStorageResponse {
  bool isExists = 1;
}

message GetRequest {
  string key = 1;
  string storage = 2;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
  string storage = 3;
}

message SetResponse {}

message DeleteRequest {
  string key = 1;
  string storage = 2;
}

message DeleteResponse {}
